Enhance dashboard functionality and UI
- Added auto-fetching of comments for connected pages after user login, improving user experience by reducing manual fetching.
- Introduced loading states for better feedback during data fetching processes in the comments and pages sections.
- Updated the UI to include new loading indicators and improved accessibility for page management features.
- Enhanced internationalization support by adding new translations for various UI elements related to page management and comments.

--- a/app/i18n/locales/el.json
+++ b/app/i18n/locales/el.json
@@ -441,11 +441,66 @@
       "darkMode": "Σκοτεινή Λειτουργία"
     },
     "pages": {
-      "description": "Συνδέστε και διαχειριστείτε τις σελίδες σας στο Facebook. Επιλέξτε ποιες σελίδες θέλετε να παρακολουθήσετε και να απαντάτε αυτόματα σε σχόλια."
+      "description": "Συνδέστε και διαχειριστείτε τις σελίδες σας στο Facebook. Επιλέξτε ποιες σελίδες θέλετε να παρακολουθήσετε και να απαντάτε αυτόματα σε σχόλια.",
+      "facebookPages": "Σελίδες Facebook",
+      "instagramAccounts": "Λογαριασμοί Instagram",
+      "manageConnectedPages": "Διαχειριστείτε τις συνδεδεμένες σελίδες σας",
+      "manageConnectedAccounts": "Διαχειριστείτε τους συνδεδεμένους λογαριασμούς σας",
+      "addFacebookPage": "Προσθήκη Σελίδας Facebook",
+      "addInstagramAccount": "Προσθήκη Λογαριασμού Instagram",
+      "pagesAvailable": "{{count}} διαθέσιμη σελίδα",
+      "pagesAvailable_plural": "{{count}} διαθέσιμες σελίδες",
+      "accountsAvailable": "{{count}} διαθέσιμος λογαριασμός",
+      "accountsAvailable_plural": "{{count}} διαθέσιμοι λογαριασμοί",
+      "allPagesConnected": "Όλες οι σελίδες είναι συνδεδεμένες",
+      "allAccountsConnected": "Όλοι οι λογαριασμοί είναι συνδεδεμένοι",
+      "allFacebookPagesActivated": "Όλες οι Σελίδες Facebook Ενεργοποιήθηκαν",
+      "allInstagramAccountsActivated": "Όλοι οι Λογαριασμοί Instagram Ενεργοποιήθηκαν",
+      "allFacebookPagesActive": "Όλες οι σελίδες Facebook στον λογαριασμό σας είναι συνδεδεμένες και ενεργές.",
+      "allInstagramAccountsActive": "Όλοι οι λογαριασμοί Instagram στον λογαριασμό σας είναι συνδεδεμένοι και ενεργοί.",
+      "gotIt": "Κατάλαβα",
+      "connected": "Συνδεδεμένο",
+      "disconnected": "Αποσυνδεδεμένο",
+      "viewComments": "Προβολή Σχολίων",
+      "facebookPage": "Σελίδα Facebook",
+      "instagramAccount": "Λογαριασμός Instagram",
+      "adAccount": "Λογαριασμός Διαφήμισης:",
+      "noFacebookPagesAvailable": "Δεν υπάρχουν διαθέσιμες σελίδες Facebook",
+      "noInstagramAccountsAvailable": "Δεν υπάρχουν διαθέσιμοι λογαριασμοί Instagram",
+      "loadingPages": "Φόρτωση σελίδων...",
+      "yourPages": "Οι Σελίδες σας",
+      "connectFacebookAccount": "Σύνδεση Λογαριασμού Facebook",
+      "connectFacebookInstagram": "Σύνδεση Facebook & Instagram",
+      "connectYourFacebookInstagram": "Συνδέστε τις Σελίδες σας στο Facebook & Instagram",
+      "adminAccessRequired": "Βεβαιωθείτε ότι έχετε πρόσβαση διαχειριστή στις σελίδες Facebook και τους επαγγελματικούς λογαριασμούς Instagram που θέλετε να συνδέσετε.",
+      "accountWillBeLinked": "Ο λογαριασμός σας στο Facebook θα συνδεθεί με τον τρέχοντα λογαριασμό σας ({{email}})",
+      "selectPageToViewComments": "Επιλέξτε Σελίδα για Προβολή Σχολίων",
+      "chooseConnectedPage": "Επιλέξτε μια συνδεδεμένη σελίδα Facebook ή Instagram για να δείτε και να διαχειριστείτε τα σχόλιά της",
+      "connectedPages": "Συνδεδεμένες Σελίδες",
+      "connectedPagesWarning": "Έχετε {{count}} συνδεδεμένη σελίδα, αλλά ο λογαριασμός σας στο Facebook είναι αποσυνδεδεμένος. Επανασυνδέστε για να τις διαχειριστείτε.",
+      "allPagesConnectedTooltip": "Όλες οι σελίδες είναι συνδεδεμένες",
+      "allAccountsConnectedTooltip": "Όλοι οι λογαριασμοί είναι συνδεδεμένοι",
+      "addPageTooltip": "Προσθήκη Σελίδας ({{count}} διαθέσιμες)",
+      "disconnectPage": "Αποσύνδεση σελίδας",
+      "addPage": "Προσθήκη Σελίδας",
+      "addAccount": "Προσθήκη Λογαριασμού",
+      "disconnectPageTitle": "Αποσύνδεση Σελίδας;",
+      "disconnectPageConfirm": "Είστε σίγουροι ότι θέλετε να αποσυνδέσετε τη {{pageName}};",
+      "disconnectPageDescription": "Αυτό θα σταματήσει την παρακολούθηση σχολίων από αυτή τη σελίδα. Μπορείτε να τη συνδέσετε ξανά ανά πάσα στιγμή.",
+      "cancel": "Ακύρωση",
+      "disconnecting": "Αποσύνδεση...",
+      "disconnect": "Αποσύνδεση",
+      "facebookAccountDisconnected": "Ο Λογαριασμός Facebook Αποσυνδέθηκε",
+      "reconnectToManage": "Επανασυνδέστε τον λογαριασμό σας στο Facebook για να διαχειριστείτε τις σελίδες και να φέρετε σχόλια.",
+      "refreshPages": "Ανανέωση Σελίδων",
+      "titleDisconnectPage": "Αποσύνδεση σελίδας"
     },
     "comments": {
       "title": "Σχόλια",
       "description": "Διαχειριστείτε και απαντήστε σε σχόλια από τις συνδεδεμένες σελίδες σας",
+      "selectPage": "Επιλέξτε Σελίδα",
+      "selectPageToView": "Επιλέξτε Σελίδα για Προβολή Σχολίων",
+      "selectPageDescription": "Επιλέξτε μια σελίδα Facebook ή Instagram από το μενού παραπάνω για να δείτε και να διαχειριστείτε τα σχόλιά της",
       "noPageSelected": "Δεν έχει επιλεγεί σελίδα",
       "goToPages": "Μετάβαση στις Σελίδες",
       "loadingComments": "Φόρτωση σχολίων...",
