--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -441,11 +441,66 @@
       "darkMode": "Dark Mode"
     },
     "pages": {
-      "description": "Connect and manage your Facebook pages. Select which pages you want to monitor and respond to comments automatically."
+      "description": "Connect and manage your Facebook pages. Select which pages you want to monitor and respond to comments automatically.",
+      "facebookPages": "Facebook Pages",
+      "instagramAccounts": "Instagram Accounts",
+      "manageConnectedPages": "Manage your connected pages",
+      "manageConnectedAccounts": "Manage your connected accounts",
+      "addFacebookPage": "Add Facebook Page",
+      "addInstagramAccount": "Add Instagram Account",
+      "pagesAvailable": "{{count}} page available",
+      "pagesAvailable_plural": "{{count}} pages available",
+      "accountsAvailable": "{{count}} account available",
+      "accountsAvailable_plural": "{{count}} accounts available",
+      "allPagesConnected": "All pages connected",
+      "allAccountsConnected": "All accounts connected",
+      "allFacebookPagesActivated": "All Facebook Pages Activated",
+      "allInstagramAccountsActivated": "All Instagram Accounts Activated",
+      "allFacebookPagesActive": "All Facebook pages in your account are currently connected and active.",
+      "allInstagramAccountsActive": "All Instagram accounts in your account are currently connected and active.",
+      "gotIt": "Got it",
+      "connected": "Connected",
+      "disconnected": "Disconnected",
+      "viewComments": "View Comments",
+      "facebookPage": "Facebook Page",
+      "instagramAccount": "Instagram Account",
+      "adAccount": "Ad Account:",
+      "noFacebookPagesAvailable": "No Facebook pages available",
+      "noInstagramAccountsAvailable": "No Instagram accounts available",
+      "loadingPages": "Loading pages...",
+      "yourPages": "Your Pages",
+      "connectFacebookAccount": "Connect Facebook Account",
+      "connectFacebookInstagram": "Connect Facebook & Instagram",
+      "connectYourFacebookInstagram": "Connect Your Facebook & Instagram Pages",
+      "adminAccessRequired": "Make sure you have admin access to the Facebook pages and Instagram Business accounts you want to connect.",
+      "accountWillBeLinked": "Your Facebook account will be linked to your current account ({{email}})",
+      "selectPageToViewComments": "Select a Page to View Comments",
+      "chooseConnectedPage": "Choose a connected Facebook or Instagram page to view and manage its comments",
+      "connectedPages": "Connected Pages",
+      "connectedPagesWarning": "You have {{count}} connected page(s), but your Facebook account is disconnected. Reconnect to manage them.",
+      "allPagesConnectedTooltip": "All pages are connected",
+      "allAccountsConnectedTooltip": "All accounts are connected",
+      "addPageTooltip": "Add Page ({{count}} available)",
+      "disconnectPage": "Disconnect page",
+      "addPage": "Add Page",
+      "addAccount": "Add Account",
+      "disconnectPageTitle": "Disconnect Page?",
+      "disconnectPageConfirm": "Are you sure you want to disconnect {{pageName}}?",
+      "disconnectPageDescription": "This will stop monitoring comments from this page. You can reconnect it anytime.",
+      "cancel": "Cancel",
+      "disconnecting": "Disconnecting...",
+      "disconnect": "Disconnect",
+      "facebookAccountDisconnected": "Facebook Account Disconnected",
+      "reconnectToManage": "Reconnect your Facebook account to manage your pages and fetch comments.",
+      "refreshPages": "Refresh Pages",
+      "titleDisconnectPage": "Disconnect page"
     },
     "comments": {
       "title": "Comments",
       "description": "Manage and respond to comments from your connected pages",
+      "selectPage": "Select a Page",
+      "selectPageToView": "Select a Page to View Comments",
+      "selectPageDescription": "Choose a Facebook or Instagram page from the dropdown above to view and manage its comments",
       "noPageSelected": "No page selected",
       "goToPages": "Go to Pages",
       "loadingComments": "Loading comments...",
